reomved toast from message using internal component usermessage

--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -172,8 +172,8 @@ Licensed under MIT
 }
 
 .highlightlayer {
-  border-bottom: 1px dotted;
-  border-color: yellow;
+  border-bottom: 2px dashed;
+  border-color: #ffb516;
 }
 
 .catalog {
