--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -144,6 +144,7 @@
       }
       .g3w_contents_back {
         display: inline-block;
+        margin-left: 5px;
         > span {
           cursor: pointer;
           font-weight: bold;
