--- a/style/less/g3w-sidebar.less
+++ b/style/less/g3w-sidebar.less
@@ -73,7 +73,7 @@
   }
 
 
-  .sidebar-menu > li {
+  .sidebar-menu > li , .sidebar-divider{
     border-bottom: 1px solid #21292d;
     &:last-child {
       border:0;
