--- a/style/less/g3w-menu-projects.less
+++ b/style/less/g3w-menu-projects.less
@@ -37,10 +37,8 @@
 }
 
 #menu-projects {
-  &.container {
-    padding: 5px;
-    overflow-y: auto;
-  }
+  width: 100%;
+  overflow-y: auto;
  .row-equal {
     display: flex;
     flex-wrap: wrap;
