add image on hover scale to project menu change map less file

--- a/style/less/g3w-menu-projects.less
+++ b/style/less/g3w-menu-projects.less
@@ -4,6 +4,9 @@
   margin-top:20px;
 }
 .project-menu-item-image {
+  img:hover {
+    transform: scale(1.2);
+  }
   position: relative;
   overflow: hidden;
   padding-bottom: 50%;
