change tools less and sidebar treem-menus

--- a/style/less/g3w-tools.less
+++ b/style/less/g3w-tools.less
@@ -27,6 +27,8 @@ ul.g3w-tools  {
     }
     .tool {
       cursor:pointer;
+      padding: 5px;
+      border-radius: 2px;
     }
   }
   .tool:hover {
