--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -33,6 +33,10 @@
   bottom: 5px;
 }
 
+.ol-overviewmap:hover {
+  background-color: rgba(255,255,255, 1) !important;
+}
+
 .ol-mouse-position {
   top: auto;
   margin: 3px;
