added getProjectMenuDom to get the same template and behaviour of change map

--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -6,3 +6,10 @@ table.dataTable.no-footer {
   border-bottom: 1px solid #dcdcdc !important;
 }
 
+.bootbox.dialogFullScreen {
+  .modal-dialog {
+    width: 90% !important;
+    height: 90% !important;
+  }
+}
+
