moved style inlin onlistatus in less file

--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -1,5 +1,15 @@
 @base_padding: 10px;
 .g3w-viewport {
+  #offline {
+    position:absolute;
+    top: 55px; background-color: rgba(255,255,255,0.9);
+    padding: 5px;
+    border-radius: 3px;
+    color :red;
+    left: 0;
+    z-index: 100;
+    font-size: 25px;
+  }
   background: #eeeeee;
   overflow:hidden;
   line-height: 0;
