--- a/style/less/app.less
+++ b/style/less/app.less
@@ -78,6 +78,7 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 @import "g3w-metadata";
 @import "g3w-overwrite-extenal";
 @import "g3w-error-page";
+@import "g3w-querybuilder";
 
 // custom g3w less skin styles
 @import "g3w-skins/g3w-skin";
