--- a/style/less/g3w-skins/blue/g3w-skin.less
+++ b/style/less/g3w-skins/blue/g3w-skin.less
@@ -3,7 +3,7 @@
     border-color: @light-blue !important;
   }
   .skin-background-color {
-    background-color: @light-blue;
+    background-color: @light-blue !important;
     &.lighten {
       background-color: lighten(@light-blue, 30%);
     }
