--- a/style/less/g3w-skins/green/g3w-skin.less
+++ b/style/less/g3w-skins/green/g3w-skin.less
@@ -3,7 +3,7 @@
     border-color: @green !important;
   }
   .skin-background-color {
-    background-color: @green;
+    background-color: @green !important;
     &.lighten {
       background-color: lighten(@green, 30%);
     }
