--- a/style/less/g3w-skins/purple/g3w-skin.less
+++ b/style/less/g3w-skins/purple/g3w-skin.less
@@ -3,7 +3,7 @@
     border-color: @purple !important;
   }
   .skin-background-color {
-    background-color: @purple;
+    background-color: @purple !important;
     &.lighten {
       background-color: lighten(@purple, 30%);
     }
