--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -3,7 +3,7 @@
     border-color: @red !important;
   }
   .skin-background-color {
-    background-color: @red;
+    background-color: @red !important;
     &.lighten {
       background-color: lighten(@red, 30%);
     }
