--- a/style/less/g3w-skins/yellow/g3w-skin.less
+++ b/style/less/g3w-skins/yellow/g3w-skin.less
@@ -3,7 +3,7 @@
     border-color: @yellow !important;
   }
   .skin-background-color {
-    background-color: @yellow;
+    background-color: @yellow !important;
     &.lighten {
       background-color: lighten(@yellow, 30%);
     }
