added query build as modal or sidebar panel and added less style

--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -13,3 +13,21 @@ table.dataTable.no-footer {
   }
 }
 
+.modal-background-dark {
+  .modal-title {
+    font-weight: bold;
+  }
+  .modal-content {
+    background-color: #222d32 !important;
+    .modal-header {
+      border-bottom:1px solid  #21292d !important;
+      .bootbox-close-button {
+        color: #ffffff !important;
+        opacity: 0.8 !important;
+      }
+      color: #ffffff !important;
+      font-weight: bold !important;
+    }
+  }
+}
+
