--- a/style/less/g3w-skins/green/g3w-skin.less
+++ b/style/less/g3w-skins/green/g3w-skin.less
@@ -21,7 +21,7 @@
     }
   }
   .skin-color {
-    color: @green;
+    color: @green !important;
   }
 
   .skin-tooltip-top + .tooltip.top, .skin-tooltip-left + .tooltip.left, .skin-tooltip-right + .tooltip.right  {
