--- a/style/less/g3w-skins/purple/g3w-skin.less
+++ b/style/less/g3w-skins/purple/g3w-skin.less
@@ -21,7 +21,7 @@
     }
   }
   .skin-color {
-    color: @purple;
+    color: @purple !important;
   }
   .skin-tooltip-top + .tooltip.top, .skin-tooltip-left + .tooltip.left, .skin-tooltip-right + .tooltip.right  {
     .tooltip-inner {
