--- a/style/less/g3w-map.less
+++ b/style/less/g3w-map.less
@@ -13,6 +13,21 @@
       display: none;
     }
   }
+  #map_footer {
+    position:absolute;
+    bottom:0;
+    height: 30px;
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    #permalink {
+      font-weight: bold;
+      font-size: 1.2em;
+      padding: 5px;
+      cursor: pointer;
+    }
+  }
   .hidemap {}
   #addcustomlayer {
     margin:30px;
