--- a/style/less/g3w-skins/blue/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/blue/g3w-mapcontrols.less
@@ -29,7 +29,7 @@
   }
 
   .ol-mouse-position {
-    color: darken(@light-blue, 20%);
+    color: @light-blue;
   }
 
   .ol-mouse-position-default {
