add info class text on app

--- a/style/less/g3w-core.less
+++ b/style/less/g3w-core.less
@@ -32,6 +32,35 @@
   }
 }
 
+div.info_help_text {
+  position:relative;
+  border-radius: 2px;
+  padding: 5px;
+  margin:0.8em;
+  white-space: pre-line;
+  background-color: rgba(255,255,255,0.1);
+
+  .info_help_text_button {
+    text-align: center;
+    font-size: 0.7em;
+    margin-top: -5px;
+    margin-left: -5px;
+    background-color: #222d32;
+    font-weight: bold;
+    color: #ffffff;
+    position:absolute;
+    top:0;
+    left:0;
+    width:15px;
+    height:15px;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+    border: 1px solid #ffffff;
+    border-radius:50%;
+  }
+}
+
+
+
 .quick-actions-menu {
   overflow: hidden;
   height:40px;
