--- a/style/less/g3w-header.less
+++ b/style/less/g3w-header.less
@@ -1,5 +1,9 @@
 //Navbar toggle button
 
+.g3w-nav {
+  max-height: 50px !important;
+}
+
 .main-header {
   .navbar {
     box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.3);
