--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -13,6 +13,14 @@ table.dataTable.no-footer {
   }
 }
 
+.bootbox.modal.in {
+  &.modal-left {
+    .modal-dialog {
+      margin-left: 0 !important;
+    }
+  }
+}
+
 .modal-background-dark {
   .modal-title {
     font-weight: bold;
