--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -16,7 +16,9 @@ table.dataTable.no-footer {
 .bootbox.modal.in {
   &.modal-left {
     .modal-dialog {
+      width: 350px !important;
       margin-left: 0 !important;
+      margin-top: 5 !important;
     }
   }
 }
