--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -18,7 +18,7 @@ table.dataTable.no-footer {
     .modal-dialog {
       width: 350px !important;
       margin-left: 0 !important;
-      margin-top: 5 !important;
+      margin-top: 5px !important;
     }
   }
 }
