--- a/style/less/g3w-skins/blue/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/blue/g3w-mapcontrols.less
@@ -50,6 +50,18 @@
     }
   }
 
+  #scale-control {
+    .select2-selection__rendered{
+      color: @light-blue !important;
+    }
+    .select2-selection__arrow b {
+      border-top-color: @light-blue !important;
+    }
+    .select2-container--default.select2-container--open .select2-selection__arrow b{
+      border-bottom-color: @light-blue !important;
+    }
+  }
+
   .ol-scale-line {
     background: @light-blue;
   }
