--- a/style/less/g3w-skins/green/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/green/g3w-mapcontrols.less
@@ -50,6 +50,12 @@
     }
   }
 
+  #scale-control {
+    .select2-selection__rendered, .select2-selection__arrow{
+      color: @green !important;
+    }
+  }
+
   .ol-scale-line {
     background: @green;
   }
