start to implement v-t for inteternalization

--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -242,6 +242,20 @@ Licensed under MIT
 }
 
 #catalog {
+ #layer-menu {
+    .wms-url-tooltip {
+      .tooltip-inner {
+        min-width: 200px;
+      }
+    }
+    .tooltip-inner {
+      word-break: break-all;
+      font-weight: bold;
+    };
+    .item-text {
+      margin-left: 3px;
+    }
+  }
   #toc_layer_help_text {
     position:relative;
     border-radius: 2px;
