--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -151,6 +151,11 @@
   }
   .select2-container--default .select2-selection--single, .select2-selection .select2-selection--single {
     height: 30px !important;
+    background-color: #eee;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    border-right-width: 0;
   }
 }
 
