changed user message position (absolute respect viewport) and some style

--- a/style/less/g3w-skins/blue/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/blue/g3w-overwrite-external.less
@@ -9,4 +9,9 @@
   .magic-radio:checked+label:before {
     border-color: @light-blue;
   }
+  .bootbox.modal.in {
+    .modal-title {
+      color: @light-blue;
+    }
+  }
 }
