--- a/style/less/g3w-skins/green/g3w-skin.less
+++ b/style/less/g3w-skins/green/g3w-skin.less
@@ -3,13 +3,13 @@
     border-color: @green !important;
   }
   .skin-background-color {
-    background-color: @green;
+    background-color: @green !important;
     &.lighten {
       background-color: lighten(@green, 30%) !important;
     }
   }
   .skin-button {
-    background: @green;
+    background: @green !important;
     &.lighten {
       background: lighten(@green, 30%) !important;
     }
