--- a/style/less/g3w-skins/purple/g3w-skin.less
+++ b/style/less/g3w-skins/purple/g3w-skin.less
@@ -9,7 +9,7 @@
     }
   }
   .skin-button {
-    background: @purple;
+    background: @purple !important;
     &.lighten {
       background: lighten(@purple, 30%) !important;
     }
