--- a/style/less/g3w-skins/red/g3w-skin.less
+++ b/style/less/g3w-skins/red/g3w-skin.less
@@ -9,7 +9,7 @@
     }
   }
   .skin-button {
-    background: @red;
+    background: @red !important;
     &.lighten {
       background: lighten(@red, 30%) !important;
     }
