--- a/style/less/g3w-skins/yellow/g3w-skin.less
+++ b/style/less/g3w-skins/yellow/g3w-skin.less
@@ -9,7 +9,7 @@
     }
   }
   .skin-button {
-    background: @yellow;
+    background: @yellow !important;
     &.lighten {
       background: lighten(@yellow, 30%) !important;
     }
