--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -14,6 +14,9 @@ table.dataTable.no-footer {
 }
 
 .bootbox.modal.in {
+  .modal-title {
+    font-weight: bold;
+  }
   &.modal-left {
     .modal-dialog {
       width: 350px !important;
