--- a/style/less/g3w-skins/purple/g3w-overwrite-external.less
+++ b/style/less/g3w-skins/purple/g3w-overwrite-external.less
@@ -9,4 +9,9 @@
   .magic-radio:checked+label:before {
     border-color: @purple;
   }
+  .bootbox.modal.in {
+    .modal-title {
+      color: @purple;
+    }
+  }
 }
