--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -1,5 +1,6 @@
 @base_padding: 10px;
 .g3w-viewport {
+  position: relative;
   #offline {
     position:absolute;
     top: 55px; background-color: rgba(255,255,255,0.9);
@@ -166,7 +167,7 @@
     }
     .close-panel-block {
       overflow: hidden;
-      line-height: 14px;
+      line-height: 20px;
       margin-top: 4px;
       margin-bottom: 10px;
       font-size:1.5em;
