changed credits and changes style

--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -24,6 +24,11 @@ table.dataTable.no-footer {
       margin-top: 5px !important;
     }
   }
+  .modal-footer {
+    button {
+      width: 70px;
+    }
+  }
 }
 
 .modal-background-dark {
