--- a/style/less/g3w-skins/blue/g3w-icon.less
+++ b/style/less/g3w-skins/blue/g3w-icon.less
@@ -5,6 +5,6 @@
 
   .g3w-mini-relation-icon {
     color: @light-blue;
-    border:2px solid @light-blue;
+    //border:2px solid @light-blue;
   }
 }
