--- a/style/less/g3w-editing-panel.less
+++ b/style/less/g3w-editing-panel.less
@@ -37,7 +37,7 @@
       margin: 5px;
       width: 45px;
       height: 45px;
-      border-radius: 50%;
+      border-radius: 30%;
       text-align: center;
     }
     &.enabled {
@@ -51,15 +51,15 @@
     }
   }
   .editbtn {
-    margin: 0 5px 5px 5px;
-    border: 1px solid #3a4448;
-    border-radius: 50%;
+    margin: 5px;
+    //border: 1px solid #3a4448;
+    border-radius: 30%;
     padding: 10px;
     display: inline-block;
     opacity: 0.4;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     &.enabled {
       opacity: 1;
       cursor: pointer;
