--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -34,11 +34,16 @@
       opacity: 0.3;
     }
   }
+  .g3w-mini-relation-icon {
+    padding: 13px;
+  }
   .editbtn {
     padding: 10px;
     margin:2px;
-    border: 1px solid darken(grey, 15%);
-    border-radius: 50%;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 30%;
     display: inline-block;
     opacity: .4;
     cursor: not-allowed;
