fixed issue on credits

--- a/style/less/app.less
+++ b/style/less/app.less
@@ -45,6 +45,10 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
   margin-bottom : 10px;
   margin-top: 5px;
 }
+.credit-title-logo {
+  font-weight: bold;
+  font-size: 1.2em;
+}
 
 .g3w-disabled {
   pointer-events: none;
