--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -15,6 +15,7 @@
     }
     .field_link {
       border-radius: 5px;
+      width: 100%;
       font-weight: bold;
       &:hover{
         color:#FFFFFF;
