--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -3,15 +3,16 @@
   position: relative;
   #offline {
     position:absolute;
-    top: 55px; background-color: rgba(255,255,255,0.9);
+    top: 55px;
+    background-color: rgba(255,255,255,0.8);
     padding: 5px;
     border-radius: 3px;
-    color :red;
+    color: #dd4b39;
     left: 0;
     z-index: 100;
     font-size: 25px;
   }
-  background: #eeeeee;
+  background: #ffffff;
   overflow:hidden;
   line-height: 0;
   .g3w-view {
