emit collapsed gui content and changed some style

--- a/style/less/g3w-overwrite-extenal.less
+++ b/style/less/g3w-overwrite-extenal.less
@@ -1,10 +1,15 @@
-table.dataTable.no-footer {
-  border-bottom: 0 !important;
+table.dataTable {
+  .no-footer {
+    border-bottom: 0 !important;
+  }
+  thead tr {
+    font-size:  1.1em;
+  }
 }
-
 .dataTables_wrapper.no-footer .dataTables_scrollBody {
   border-bottom: 1px solid #dcdcdc !important;
 }
+
 
 .bootbox.dialogFullScreen {
   .modal-dialog {
