--- a/style/less/admin-lte2-less/core.less
+++ b/style/less/admin-lte2-less/core.less
@@ -127,7 +127,7 @@ body.hold-transition {
 /* Content */
 .content {
   min-height: 250px;
-  padding: 15px;
+  padding: 0;
   .container-fixed(@grid-gutter-width);
 }
 
