--- a/style/less/g3w-viewport.less
+++ b/style/less/g3w-viewport.less
@@ -171,6 +171,7 @@
       line-height: 20px;
       margin-top: 2px;
       margin-bottom: 5px;
+      margin-left: 10px;
       font-size:1.5em;
       .panel-title {
         margin-top: 10px;
