--- a/style/less/g3w-skins/yellow/g3w-viewport.less
+++ b/style/less/g3w-skins/yellow/g3w-viewport.less
@@ -25,7 +25,7 @@
     }
     #g3w-view-content {
       #layer_attribute_table {
-        tbody tr.feature_attribute[selected="selected"] {
+        tbody tr.feature_attribute[selected="selected"] td {
           background: lighten(@yellow, 30%) !important;
         }
       }
